--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,10 @@ h1, h2, h3, h4, h5, h6 {
 #header.header-scrolled {
   top: 0;
   background: rgba(0, 0, 0, 0.85);
+  .white-text {
+    color: white; /* White text color */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Subtle shadow for contrast */
+}
   border-bottom: 1px solid #37332a;
 }
 
@@ -935,7 +939,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
